:zap: 依赖管理 & 插件优化
Signed-off-by: Yujie Wu <coffee377@dingtalk.com>